fixed z-index bug on categories cards

--- a/optic-prive-front/src/app/components/categories/categories.component.scss
+++ b/optic-prive-front/src/app/components/categories/categories.component.scss
@@ -3,7 +3,7 @@
 span.rotate {
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-    color: red;
+    color: $primary-contrast;
     padding: 0px 0px 0px 10px;
     font-size: 20px;
     font-weight: 200;
