--- a/optic-prive-front/src/app/components/header/header.component.scss
+++ b/optic-prive-front/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@ $secondary: #FBEADF;
 $secondary-contrast : #56474A;
 
 nav {
+  z-index: 1;
   padding: 10px 0px;
   background-color: rgb(255, 255, 255);
 
